// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  className="footer border-top py-3 px-4"
  role="contentinfo"
>
  <a
    aria-label="edX Home"
    className="d-block"
    href="http://localhost:18000"
  >
    <img
      alt="Powered by Open edX"
      src="https://edx-cdn.org/v3/default/logo-trademark.svg"
      style={
        Object {
          "maxHeight": 45,
        }
      }
    />
  </a>
  <div
    className="footer-links-container"
  >
    <div
      className="footer-navigation-container"
    >
      <ul
        className="nav nav-list"
      />
    </div>
  </div>
  <form
    className="form-inline"
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="d-inline-block m-0"
        htmlFor="site-footer-language-select"
      >
        Choose Language
      </label>
      <select
        className="form-control-sm mx-2"
        defaultValue="en"
        id="site-footer-language-select"
        name="site-footer-language-select"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="es"
        >
          Español
        </option>
      </select>
      <button
        className="btn btn-outline-primary btn-sm"
        data-testid="site-footer-submit-btn"
        type="submit"
      >
        Apply
      </button>
    </div>
  </form>
  <span
    className="copyright-site mt-2"
  >
    Copyrights ©2024. All Rights Reserved.
  </span>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  className="footer border-top py-3 px-4"
  role="contentinfo"
>
  <a
    aria-label="edX Home"
    className="d-block"
    href="http://localhost:18000"
  >
    <img
      alt="Powered by Open edX"
      src="https://edx-cdn.org/v3/default/logo-trademark.svg"
      style={
        Object {
          "maxHeight": 45,
        }
      }
    />
  </a>
  <div
    className="footer-links-container"
  >
    <div
      className="footer-navigation-container"
    >
      <ul
        className="nav nav-list"
      />
    </div>
  </div>
  <span
    className="copyright-site mt-2"
  >
    Copyrights ©2024. All Rights Reserved.
  </span>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in es 1`] = `
<footer
  className="footer border-top py-3 px-4"
  role="contentinfo"
>
  <a
    aria-label="edX Home"
    className="d-block"
    href="http://localhost:18000"
  >
    <img
      alt="Powered by Open edX"
      src="https://edx-cdn.org/v3/default/logo-trademark.svg"
      style={
        Object {
          "maxHeight": 45,
        }
      }
    />
  </a>
  <div>
    Loading...
  </div>
  <span
    className="copyright-site mt-2"
  >
    Copyrights ©2024. All Rights Reserved.
  </span>
</footer>
`;
